--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -851,16 +851,22 @@ p {
   width: min-content;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 767px) {
+.inner-content_background {
+  background-image: none !important;
+  width: 100vw;
+  height: 89.5vh;
 
-
+}
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 600px) {
+ .bottom-right {
+    right: -50%;
+    bottom: 80%;
+}
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
@@ -868,14 +874,21 @@ p {
   right: -53%;
   /* bottom: 46%; */
 }
-}
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-.inner-content_background {
-  background-image: none !important;
-  width: 100vw;
-  height: 89.5vh;
-
+  .inner-content_background {
+  height: 91.5vh;
+ }
 }
 
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+   .inner-content_background {
+  height: 91.5vh;
+ }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+   .inner-content_background {
+  height: 91.5vh;
+ }
 }
