--- a/src/layout/Carousel.css
+++ b/src/layout/Carousel.css
@@ -141,14 +141,18 @@
   /* border: 3px solid #bcd38c; */
   border-radius: 1rem;
   /* position: relative; */
-  position: absolute;
+  /* position: absolute; */
   /* left:20%; */
-  left: 19%;
+  /* left: 19%; */
   padding: 2rem 0 0 0;
   /* overflow: hidden; */
   width: 40vw !important;
   /* margin: 17% auto; */
-  margin: 26% auto 0 auto;
+  /* margin: 26% auto 0 auto; */
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .carousel.carousel-slider .control-arrow {
   top: 0;
@@ -256,10 +260,10 @@
 }
 .carousel .control-dots {
   position: absolute;
-  left: -5%;
+  /* left: -5%; */
   bottom: -15%;
   /* margin: 3rem; */
-  margin: 1rem 3rem 3rem 3rem;
+  /* margin: 1rem 3rem 3rem 3rem; */
   padding: 0;
   text-align: center;
   width: 100%;
@@ -303,95 +307,36 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .carousel.carousel-slider {
-    background-color: white;
-    /* background-color: transparent; */
-    /* border: 3px solid #bcd38c; */
-    border-radius: 1rem;
-    /* position: relative; */
-    position: absolute;
-    /* left: 20%; */
-    left: -4%;
-    padding: 2rem 0 0 0;
-    /* overflow: hidden; */
     width: 71vw !important;
-    /* margin: 17% auto; */
-    margin: 18% auto 0 auto;
   }
   .control-dots {
     margin: 3rem 0 3rem 0;
     bottom: -24% !important;
   }
-  .bottom-right {
-      right: -40%;
-    bottom: -395px;
-    }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 767px) {
   .carousel.carousel-slider {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    left: -11%;
-    padding: 2rem 0 0 0;
     width: 74vw !important;
-    margin: 26% auto 0 auto;
-}
- .bottom-right {
-       right: -50%;
+  }
+  .bottom-right {
+    right: -50%;
     bottom: 50px;
-    }
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  .carousel.carousel-slider {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    left: 10%;
-    padding: 2rem 0 0 0;
-    width: 50vw !important;
-    margin: 70% auto 0 auto;
-    }
-    .carousel .control-dots {
-      bottom:-21%;
-    }
-    .bottom-right {
+  .bottom-right {
     right: 5%;
     bottom: 80%;
-    }
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-  .carousel.carousel-slider {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    left: 16%;
-    padding: 2rem 0 0 0;
-    width: 44vw !important;
-    margin: 48% auto 0 auto;
-  }
   .bottom-right {
     right: 5%;
     bottom: 80%;
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .carousel.carousel-slider {
-    background-color: white;
-    border-radius: 1rem;
-    position: absolute;
-    left: 16%;
-    padding: 2rem 0 0 0;
-    width: 37vw !important;
-    margin: 32% auto 0 auto;
-}
-.carousel .control-dots {
-  bottom:-20%;
-}
+  }
 }
