--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -667,13 +667,13 @@ p {
 .margin-btn {
   margin-top: 2.5rem;
 }
-.me-tree-grid {
+/* .me-tree-grid {
   display: grid;
   /* grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr; */
-  grid-template-areas: "toolkit me-tree empty";
+  /* grid-template-areas: "toolkit me-tree empty";
   grid-gap: 0.2rem;
-  overflow: hidden;
+  overflow: hidden; */
   /* height: auto; */
   /* background-color: rgb(233, 220, 224);
   color: rgb(78, 61, 64);
@@ -681,10 +681,10 @@ p {
   text-align: left;
   margin: 0 auto;
   padding: 1rem; */
-}
-.toolkit-area {
+/* }  */
+/* .toolkit-area {
   grid-area: toolkit;
-}
+} */
 .me-tree-area {
   grid-area: me-tree;
   /* width: 100vw; */
