Add .ready-mobile styling to ready to play button in 786px media query
Co-authored-by: Jo Humphrey <31373245+jamdelion@users.noreply.github.com>

--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -714,7 +714,13 @@ p {
   .me-tree-area {
     width: 100vw;
   }
-
+  .ready-mobile {
+    width: max-content;
+    margin-right: 1rem;
+    float: right;
+    font-size: 1.2rem;
+    padding: 0.3rem;
+  }
   .mobile-column {
     flex-direction: column !important;
   }
