add wonder buttons with link to gallery
Co-authored-by: Jo Humphrey <31373245+jamdelion@users.noreply.github.com>

--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -879,3 +879,8 @@ p {
 .min-content {
   width: min-content;
 }
+.wonder-buttons{
+  align-items: flex-end;
+  gap: 1rem;
+  margin-right: -21%;
+}
