--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -664,6 +664,10 @@ p {
   margin: 1rem;
 }
 
+.margin-top-sm {
+  margin-top: 1rem;
+}
+
 .margin-btn {
   margin-top: 2.5rem;
 }
@@ -879,7 +883,7 @@ p {
 .min-content {
   width: min-content;
 }
-.wonder-buttons{
+.wonder-buttons {
   align-items: flex-end;
   gap: 1rem;
   margin-right: -21%;
