--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -624,8 +624,16 @@ p {
   margin-left: 2rem;
 }
 
-.gallery-width {
+.square30{
+  height:30vh;
   width: 30vw;
+}
+
+.gallery-width {
+  /* width: 30vw; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .magic-link {
   background-color: #d19f00 !important;
@@ -673,6 +681,9 @@ p {
   margin-top: 1rem;
 }
 
+.margin-top-md {
+  margin-top: 2rem;
+}
 .margin-btn {
   margin-top: 2.5rem;
 }
