center text, grid-column span2
Co-authored-by: Jo Humphrey <31373245+jamdelion@users.noreply.github.com>

--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -628,7 +628,9 @@ p {
   height:30vh;
   width: 30vw;
 }
-
+.grid-span-2{
+  grid-column: span 2; 
+}
 .gallery-width {
   /* width: 30vw; */
   width: 100%;
